--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -2,23 +2,20 @@
  {% for post in site.posts %}
     <div class="portfolio-modal modal fade" id="portfolioModal-{{ post.modal-id }}" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
+            <!-- <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
                     <div class="rl">
                     </div>
                 </div>
-            </div>
+            </div> -->
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>{{ post.title }}</h2>
+                            <h3>{{ post.project-name }}</h3>
                             <!-- <hr class="star-primary"> -->
-                            <hr class="star-light">
-                            <img src="img/portfolio/{{ post.img }}" class="img-responsive img-centered" alt="{{ post.alt }}">
-                            {% if post.url %}
-                            <iframe src={{ post.url }} width="100%" style="border:none;" onload="this.style.height=(this.contentWindow.document.body.scrollHeight+100)+'px';"></iframe>
-                            {% endif %}
+                            <!-- <hr class="star-light"> -->
+                            <!-- <img src="img/portfolio/{{ post.img }}" class="img-responsive img-centered" alt="{{ post.alt }}"> -->
                             {% if post.description %}
                                 <p>{{ post.description }}</p>
                             {% endif %}
@@ -43,6 +40,10 @@
                                 {% endif %}
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                            {% if post.iframe %}
+                            <iframe src="{{ post.iframe }}" width="120%" height="800" style="border:none; margin-left: -10%;"></iframe>
+                            <!-- <iframe src="{{ post.iframe }}" width="100%" style="border:none;" onload="this.style.height=(this.contentWindow.document.body.scrollHeight+100)+'px';"></iframe> -->
+                            {% endif %}
                         </div>
                     </div>
                 </div>
