ggit: Updated wyrax.github.io

--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -27,7 +27,7 @@
                     <p>3ds Max</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="https://github.com/jeromelachaud/freelancer-theme" class="btn btn-lg btn-outline">
+                    <a href="http://wyrax.github.io/cv/pdf/cv2021.pdf" target="_blank" class="btn btn-lg btn-outline">
                         <i class="fa fa-download"></i> Download CV
                     </a>
                 </div>
