ggit: Updated wyrax.github.io

--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -9,14 +9,14 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
+                    <h3>Programming</h3>
+                    <p>HTML, CSS, JavaScript, jQuery, SVG&nbsp;animation, AmCharts, AJAX, JSON, ExtendScript, Bootstrap, Cordova, Jekyll, React, NPM, Git</p>
                     <h3>Graphic</h3>
                     <p>Photoshop, Illustrator, InDesign, QuarkXPress</p>
-                    <h3>Programming</h3>
-                    <p>HTML, CSS, JavaScript, jQuery, SVG&nbsp;animation, AmCharts, React</p>
                 </div>
                 <div class="col-lg-4">
                     <h3>Animation</h3>
-                    <p>Animate, Google Web Designer</p>
+                    <p>Animate, GIF&nbsp;animation, Google Web Designer</p>
                 </div>
                 <div class="col-lg-4">
                     <h3>Audio</h3>
